--- a/frontend/style.css
+++ b/frontend/style.css
@@ -1,30 +1,33 @@
-body {
-    font-family: 'Montserrat', sans-serif;
-    display: block;
-}
-
 .header {
     text-align: center;
 }
 
+body {
+    font-family: Montserrat, sans-serif;
+}
 .row {
+
     display: flex;
     justify-content: space-between;
     padding: 5%;
 }
 
-
-.left-column {
+.left-side {
     width: 40%;
 }
 
-.right-column {
+.right-side {
     width: 60%;
 }
 
-textarea {
+textarea{
     width: 100%;
+    height: 100px;
+    background-color: aqua;
+    /* border: 20px;
+    border-color: red; */
 }
+
 
 .due-date {
     display: flex;
@@ -32,13 +35,5 @@ textarea {
 }
 
 div {
-    padding: 6px
-}
-
-/* Style active-item class with nice and clean design*/
-.active-item {
-    background-color: #f5f5f5;
-    border-radius: 5px;
-    padding: 5px;
-    margin: 5px;
+    padding: 6px;
 }
